# crewAI-support-system-V0.5

./: CLAUDE.md  bmi_report.txt  fitness_plan.md  pyproject.toml  readme.md
.claude/: instructions.md
.claude/skills/2backup/: SKILL.md  config.json
.claude/skills/2obsidian/: SKILL.md  config.json
.claude/skills/4obsidian/: SKILL.md
backup/: tasks.yaml  tasksv1.yaml  tools.py  toolsv1.py
doc/: readme.md  架构说明.pptx
src/support/: main.py
src/support/api/: CommonIntent.py  FaultSeekTools.py  config copy.py  tools.py
src/support/customer_support/config/: agents.yaml  tasks.yaml
src/support/customer_support/flow/: FaultDiagnosisProcess.py  FitnessConsultingProcessFlow.py  OrderStateProcessFlow_.py  agents.py  orderlist.json  tasks.py  tools.py
src/support/internal_support/config/: agents.yaml  tasks.yaml
src/support/internal_support/flows/: TransactionCountQueryFlow.py  agents.py
src/support/models/: DataSessionManager.py  Fault.py  FaultCase.py  FaultList.py  LLMConfig.py  Question.py  SessionManager.py  constants.py
src/support/router/config/: agents.yaml  businessrule.yaml  tasks.yaml
src/support/router/flows/: MainSupportFlow.py  agents.py  tasks.py
src/support/service/: chatservice.py
src/support/tools/: FlowResponse.py  ReqMessage.py  tools.py
src/tests/: fault_case0.json  fault_case1.json  fault_list1.json
src/web/: index.html
